--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dayjs": "^1.11.11",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "ws": "^8.18.0"
   }
 }
